--- a/3.html
+++ b/3.html
@@ -19,6 +19,6 @@
   <p>다이어트에 있어서 운동은 필수적인 부분인 것은 확실하나 잘못된 운동 방법은 피로물질을 발생시키고 스트레스 지수를 상승시켜 체중 감량에 오히려 방해가 되거나 중도에 다이어트를 포기할 수 있습니다.</p>
     <img src="work out.jpg" width="600">
   <p>다이어트의 가장 중요한 핵심 중 하나는 바로 '지속성'입니다. 식단, 운동, 생활습관 모두 다이어트를 하면서 만들어진 습관을 평생 지속할 수 있는지가 관건입니다.</p>
-  <p>Minoo's DIET에서는 개개인에게 맞는 운동 솔루션을 제공해드립니다.</p>
+  <p>Minwoo's DIET에서는 개개인에게 맞는 운동 솔루션을 제공해드립니다.</p>
 
 </body>
