--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1><a href="Minwoo's DIET.html">Minwoo's DIET</a></h1>
+  <h1><a href="index.html">Minwoo's DIET</a></h1>
   <ol>
     <li><a href="1.html">다이어트</a></li>
     <li><a href="2.html">식단</a></li>
